--- a/src/app/components/wallet/create/create-wallet.component.html
+++ b/src/app/components/wallet/create/create-wallet.component.html
@@ -4,19 +4,19 @@
         <mat-card-content>
             <mat-form-field>
                 <input matInput placeholder="Name" formControlName="name">
-                <!-- <zorb-error [control]="form.controls['name']" label="Name"></zorb-error> -->
+                <zorb-error [control]="form.controls['name']" label="Name"></zorb-error>
             </mat-form-field>
             <mat-form-field>
                 <input matInput placeholder="Password" formControlName="password" type="password">
-                <!-- <zorb-error [control]="form.controls['password']" label="Password"></zorb-error> -->
+                <zorb-error [control]="form.controls['password']" label="Password"></zorb-error>
             </mat-form-field>
             <mat-form-field>
                 <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password">
-                <!-- <zorb-error [control]="form.controls['confirmPassword']" label="Confirm Password"></zorb-error> -->
+                <zorb-error [control]="form.controls['confirmPassword']" label="Confirm Password"></zorb-error>
             </mat-form-field>
         </mat-card-content>
         <mat-card-actions *ngIf="form.valid">
-            <button mat-button (click)="submit()">Create</button>
+            <button mat-button (click)="next()">Next</button>
         </mat-card-actions>
     </mat-card>
 </form>
