--- a/src/app/components/dashboard/transaction-history.component.html
+++ b/src/app/components/dashboard/transaction-history.component.html
@@ -1,4 +1,4 @@
-<mat-table #table [dataSource]="latestTransactions">
+<mat-table #table [dataSource]="transactions">
 
     <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
